# smart-assistant

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  run.sh
src/viam_smart_assistant/: __init__.py  __main__.py  assistant.py  config.py
